; ModuleID = '/home/carl/AnghaBench/vlc/src/video_output/extr_vout_intf.c_vout_IntfInit.c'
source_filename = "/home/carl/AnghaBench/vlc/src/video_output/extr_vout_intf.c_vout_IntfInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"autoscale\00", align 1
@AutoScaleCallback = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"zoom\00", align 1
@ZoomCallback = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [10 x i8] c"crop-left\00", align 1
@CropBorderCallback = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [9 x i8] c"crop-top\00", align 1
@.str.4 = private unnamed_addr constant [11 x i8] c"crop-right\00", align 1
@.str.5 = private unnamed_addr constant [12 x i8] c"crop-bottom\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"crop\00", align 1
@CropCallback = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [13 x i8] c"aspect-ratio\00", align 1
@AspectCallback = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [13 x i8] c"video-on-top\00", align 1
@AboveCallback = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [16 x i8] c"video-wallpaper\00", align 1
@WallPaperCallback = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [11 x i8] c"fullscreen\00", align 1
@FullscreenCallback = common dso_local global i32 0, align 4
@.str.11 = private unnamed_addr constant [15 x i8] c"video-snapshot\00", align 1
@SnapshotCallback = common dso_local global i32 0, align 4
@.str.12 = private unnamed_addr constant [13 x i8] c"video-filter\00", align 1
@VideoFilterCallback = common dso_local global i32 0, align 4
@.str.13 = private unnamed_addr constant [11 x i8] c"sub-source\00", align 1
@SubSourceCallback = common dso_local global i32 0, align 4
@.str.14 = private unnamed_addr constant [11 x i8] c"sub-filter\00", align 1
@SubFilterCallback = common dso_local global i32 0, align 4
@.str.15 = private unnamed_addr constant [11 x i8] c"sub-margin\00", align 1
@SubMarginCallback = common dso_local global i32 0, align 4
@.str.16 = private unnamed_addr constant [10 x i8] c"viewpoint\00", align 1
@ViewpointCallback = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vout_IntfInit(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @AutoScaleCallback, align 4
  %5 = call i32 @var_AddCallback(i32* %3, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %4, i32* null)
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @ZoomCallback, align 4
  %8 = call i32 @var_AddCallback(i32* %6, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 %7, i32* null)
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @CropBorderCallback, align 4
  %11 = call i32 @var_AddCallback(i32* %9, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i32 %10, i32* null)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @CropBorderCallback, align 4
  %14 = call i32 @var_AddCallback(i32* %12, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i32 %13, i32* null)
  %15 = load i32*, i32** %2, align 8
  %16 = load i32, i32* @CropBorderCallback, align 4
  %17 = call i32 @var_AddCallback(i32* %15, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0), i32 %16, i32* null)
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* @CropBorderCallback, align 4
  %20 = call i32 @var_AddCallback(i32* %18, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.5, i64 0, i64 0), i32 %19, i32* null)
  %21 = load i32*, i32** %2, align 8
  %22 = load i32, i32* @CropCallback, align 4
  %23 = call i32 @var_AddCallback(i32* %21, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0), i32 %22, i32* null)
  %24 = load i32*, i32** %2, align 8
  %25 = load i32, i32* @AspectCallback, align 4
  %26 = call i32 @var_AddCallback(i32* %24, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.7, i64 0, i64 0), i32 %25, i32* null)
  %27 = load i32*, i32** %2, align 8
  %28 = load i32, i32* @AboveCallback, align 4
  %29 = call i32 @var_AddCallback(i32* %27, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.8, i64 0, i64 0), i32 %28, i32* null)
  %30 = load i32*, i32** %2, align 8
  %31 = load i32, i32* @WallPaperCallback, align 4
  %32 = call i32 @var_AddCallback(i32* %30, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.9, i64 0, i64 0), i32 %31, i32* null)
  %33 = load i32*, i32** %2, align 8
  %34 = load i32, i32* @FullscreenCallback, align 4
  %35 = call i32 @var_AddCallback(i32* %33, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.10, i64 0, i64 0), i32 %34, i32* null)
  %36 = load i32*, i32** %2, align 8
  %37 = load i32, i32* @SnapshotCallback, align 4
  %38 = call i32 @var_AddCallback(i32* %36, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.11, i64 0, i64 0), i32 %37, i32* null)
  %39 = load i32*, i32** %2, align 8
  %40 = load i32, i32* @VideoFilterCallback, align 4
  %41 = call i32 @var_AddCallback(i32* %39, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.12, i64 0, i64 0), i32 %40, i32* null)
  %42 = load i32*, i32** %2, align 8
  %43 = load i32, i32* @SubSourceCallback, align 4
  %44 = call i32 @var_AddCallback(i32* %42, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.13, i64 0, i64 0), i32 %43, i32* null)
  %45 = load i32*, i32** %2, align 8
  %46 = load i32, i32* @SubFilterCallback, align 4
  %47 = call i32 @var_AddCallback(i32* %45, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.14, i64 0, i64 0), i32 %46, i32* null)
  %48 = load i32*, i32** %2, align 8
  %49 = load i32, i32* @SubMarginCallback, align 4
  %50 = call i32 @var_AddCallback(i32* %48, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.15, i64 0, i64 0), i32 %49, i32* null)
  %51 = load i32*, i32** %2, align 8
  %52 = load i32, i32* @ViewpointCallback, align 4
  %53 = call i32 @var_AddCallback(i32* %51, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.16, i64 0, i64 0), i32 %52, i32* null)
  ret void
}

declare dso_local i32 @var_AddCallback(i32*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
